--- a/package.json
+++ b/package.json
@@ -22,14 +22,24 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor-community/barcode-scanner": "^4.0.1",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
+    "@capacitor/android": "5.5.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/barcode-scanner": "^5.0.0-beta.15",
     "@ionic/angular": "^7.0.0",
+    "angularx-qrcode": "^16.0.2",
+    "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-plugin-scanbot-barcode-scanner": "^3.4.0",
     "firebase": "^10.5.0",
     "ionicons": "^7.0.0",
+    "jsqr": "^1.4.0",
+    "ngx-scanner-qrcode": "^1.6.7",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
