--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@angular/router": "^16.0.0",
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
-    "@capacitor/android": "5.5.0",
+    "@capacitor/android": "^5.5.0",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.5.0",
+    "@capacitor/core": "^5.5.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
